pom.xml - added jvm parameters for jenkins build

--- a/modules/reprotool.model/pom.xml
+++ b/modules/reprotool.model/pom.xml
@@ -115,9 +115,15 @@
 							<workflowEngine>mwe2</workflowEngine>
 							<workflowDescriptor>reprotool.model.GenerateReprotoolModel</workflowDescriptor>
 							<timestampFileName>emf-generator.timestamp</timestampFileName>
-							<!-- <jvmSettings> <fork>true</fork> <jvmArgs> <jvmArg>-Xms100m</jvmArg> 
-								<jvmArg>-Xmx700m</jvmArg> <jvmArg>-XX:MaxPermSize=128m</jvmArg> <jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg> 
-								</jvmArgs> </jvmSettings> -->
+							<jvmSettings>
+								<fork>true</fork>
+								<jvmArgs>
+									<jvmArg>-Xms100m</jvmArg>
+									<jvmArg>-Xmx700m</jvmArg>
+									<jvmArg>-XX:MaxPermSize=128m</jvmArg>
+									<!-- <jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg> -->
+								</jvmArgs>
+							</jvmSettings>
 						</configuration>
 					</execution>
 				</executions>
