changed UseCaseEmfEditor ID from "cz.cuni..." to "org.eclipselabs..."

--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -58,7 +58,7 @@
             contributorClass="reprotool.ide.editors.usecase.UsecaseEMFActionBarContributor"
             default="false"
             extensions="usecase"
-            id="cz.cuni.mff.reprotool.ide.UseCaseEmfEditor"
+            id="org.eclipselabs.reprotool.ide.UseCaseEmfEditor"
             name="Use case EMF Editor">
       </editor>
       <editor
