added support for LTL formulas into the nusmv plugin. This is a fix for issue 68. Issue 77 has also been fixed.

--- a/modules/reprotool.fm.nusmv/plugin.xml
+++ b/modules/reprotool.fm.nusmv/plugin.xml
@@ -21,9 +21,9 @@
             nameFilter="*.nusmv"
             objectClass="org.eclipse.core.resources.IFile">
          <action
-               class="reprotool.fm.nusmv.actions.CheckCTL"
+               class="reprotool.fm.nusmv.actions.RunNuSMV"
                id="reprotool.fm.nusmv.action1"
-               label="Check CTL using NuSMV">
+               label="Run NuSMV Verification">
          </action>
       </objectContribution>
    </extension>
