- moved "product" file to org.eclipselabs.reprotool.product project (maven build needs separate project) - changed product to be feature based - added target project

--- a/modules/reprotool.maven.aggregator/pom.xml
+++ b/modules/reprotool.maven.aggregator/pom.xml
@@ -10,7 +10,9 @@
 
 	<modules>
 		<module>../reprotool.maven.parent</module>
-		<!-- <module>../org.eclipselabs.reprotool.branding</module> -->
+		<module>../org.eclipselabs.reprotool.branding</module>
+		<module>../org.eclipselabs.reprotool.product</module>
+		<module>../org.eclipselabs.reprotool.target</module>
 		
 		<module>../org.eclipselabs.reprotool.features.common</module>
 		<module>../org.eclipselabs.reprotool.features.exporters</module>
