--- a/modules/reprotool.txtspec/build.properties
+++ b/modules/reprotool.txtspec/build.properties
@@ -4,5 +4,4 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.xml
-additional.bundles = org.eclipse.emf.mwe.utils,\
-                     org.eclipse.emf.mwe2.launch
+additional.bundles = org.eclipse.emf.mwe.utils
