--- a/modules/reprotool.txtspec/pom.xml
+++ b/modules/reprotool.txtspec/pom.xml
@@ -100,7 +100,7 @@
 							<!-- <goal>testCompile</goal> -->
 						</goals>
 						<configuration>
-							<outputDirectory>xtend-gen</outputDirectory>
+							<outputDirectory>${basedir}/xtend-gen</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
