--- a/modules/reprotool.maven.parent/pom.xml
+++ b/modules/reprotool.maven.parent/pom.xml
@@ -16,13 +16,6 @@
 		<tycho-version>0.13.0</tycho-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	<!-- <repositories> <repository> <id>indigo</id> <layout>p2</layout> <url>http://download.eclipse.org/releases/indigo/</url> 
-		</repository> <repository> <id>eclipse-modeling</id> <layout>p2</layout> 
-		<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url> 
-		</repository> <repository> <id>nusmv</id> <layout>p2</layout> <url>http://metrikforge.informatik.hu-berlin.de/p2-repositories/nusmv-tools/release/</url> 
-		</repository> <repository> <id>maven.eclipse.org</id> <url>http://maven.eclipse.org/nexus/content/groups/public/</url> 
-		</repository> <repository> <id>xtend</id> <url>http://build.eclipse.org/common/xtend/maven/</url> 
-		</repository> </repositories> -->
 	<build>
 		<plugins>
 			<plugin>
@@ -80,6 +73,15 @@
 				<version>3.3.0</version>
 			</plugin>
 			<plugin>
+				<groupId>org.eclipse.xtend2</groupId>
+				<artifactId>xtend-maven-plugin</artifactId>
+				<version>2.2.0</version>
+				<configuration>
+					<!-- need to prefix by basedir to generate to currently built module -->
+					<outputDirectory>${basedir}/xtend-gen</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>2.4.1</version>
@@ -88,7 +90,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.4.1</version>
-				<!-- <configuration> <encoding>ISO-8859-1</encoding> </configuration> -->
 			</plugin>
 		</plugins>
 	</build>
