--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -2,38 +2,33 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
+         point="org.eclipse.ui.perspectives">
+      <perspective
+            class="reprotool.ide.ReprotoolIdePerspectiveFactory"
+            icon="icons/reprotool-web-logo-16x16.png"
+            id="reprotool.ide.perspectives.ReprotoolPerspective"
+            name="Reprotool">
+      </perspective>
+   </extension>
+   <extension
          point="org.eclipse.ui.views">
       <category
-            id="cz.cuni.mff.reprotool.ide.category_reprotool"
-            name="ReProTool">
+            id="reprotool.ide.views.ReprotoolCategory"
+            name="Reprotool">
       </category>
       <view
          name="Progress View"
-         category="org.eclipse.ui"
+         category="reprotool.ide.views.ReprotoolCategory"
          class="org.eclipse.ui.ExtensionFactory:progressView"
          id="org.eclipse.ui.views.ProgressView"
          restorable="true">
       </view>
       <view
-            class="reprotool.ide.views.OutlineContents"
-            id="reprotool.ide.views.OutlineContents"
-            name="Outline View">
-      </view>
-      <view
-            category="cz.cuni.mff.reprotool.ide.category_reprotool"
+            category="reprotool.ide.views.ReprotoolCategory"
             class="reprotool.ide.views.sentenceanalysis.step.SentenceAnalysisSheet"
             id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet"
             name="Sentence analysis">
       </view>
-   </extension>
-   <extension
-         point="org.eclipse.ui.perspectives">
-      <perspective
-            class="reprotool.ide.ReprotoolIdePerspectiveFactory"
-            icon="icons/reprotool-web-logo-16x16.png"
-            id="cz.cuni.mff.reprotool.ide.perspective_reprotool_ide"
-            name="Reprotool">
-      </perspective>
    </extension>
    <extension
          point="org.eclipse.ui.editors">
@@ -62,6 +57,7 @@
             default="true"
             extensions="cexmp"
             filenames="cexmp"
+            icon="icons/traces.png"
             id="reprotool.ide.counterExampleEditorId"
             name="Counter example editor">
       </editor>
@@ -75,7 +71,7 @@
       <wizard
             category="reprotool.ide.category1"
             class="reprotool.ide.wizards.ProjectWizard"
-            finalPerspective="cz.cuni.mff.reprotool.ide.perspective_reprotool_ide"
+            finalPerspective="reprotool.ide.perspectives.ReprotoolPerspective"
             hasPages="true"
             icon="icons/reprotool-web-logo-16x16.png"
             id="reprotool.ide.wizard1"
@@ -103,13 +99,7 @@
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
       <perspectiveExtension
-            targetID="cz.cuni.mff.reprotool.ide.perspective_reprotool_ide">
-         <viewShortcut
-               id="cz.cuni.mff.reprotool.ide.views.view_linguistic_tools">
-         </viewShortcut>
-         <viewShortcut
-               id="cz.cuni.mff.reprotool.ide.view_project">
-         </viewShortcut>
+            targetID="reprotool.ide.perspectives.ReprotoolPerspective">
          <view
                closeable="true"
                id="org.eclipse.ui.navigator.ProjectExplorer"
@@ -140,24 +130,6 @@
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
-         <view
-               closeable="true"
-               id="cz.cuni.mff.reprotool.ide.views.view_linguistic_tools"
-               minimized="false"
-               moveable="true"
-               relationship="stack"
-               relative="org.eclipse.ui.views.ProgressView"
-               visible="true">
-         </view>
-         <view
-               closeable="true"
-               id="cz.cuni.mff.reprotool.ide.view_parsed_tree"
-               minimized="false"
-               moveable="true"
-               relationship="bottom"
-               relative="org.eclipse.ui.views.PropertySheet"
-               visible="true">
-         </view>
          <newWizardShortcut
                id="reprotool.ide.wizard1">
          </newWizardShortcut>
@@ -170,6 +142,9 @@
                relative="org.eclipse.ui.views.PropertySheet"
                visible="true">
          </view>
+         <viewShortcut
+               id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet">
+         </viewShortcut>
       </perspectiveExtension>
    </extension>
    <extension
