--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -105,24 +105,24 @@
                id="org.eclipse.ui.navigator.ProjectExplorer"
                minimized="false"
                moveable="true"
-               ratio="0.25"
+               ratio="0.20"
                relationship="left"
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
          <view
                closeable="true"
-               id="org.eclipse.ui.views.PropertySheet"
+               id="org.eclipse.ui.views.ContentOutline"
                minimized="false"
                moveable="true"
-               ratio="0.6"
+               ratio="0.65"
                relationship="right"
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
          <view
                closeable="true"
-               id="org.eclipse.ui.views.ProgressView"
+               id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet"
                minimized="false"
                moveable="true"
                ratio="0.7"
@@ -130,21 +130,12 @@
                relative="org.eclipse.ui.editorss"
                visible="true">
          </view>
-         <newWizardShortcut
-               id="reprotool.ide.wizard1">
-         </newWizardShortcut>
-         <view
-               closeable="true"
-               id="org.eclipse.ui.views.ContentOutline"
-               minimized="false"
-               moveable="true"
-               relationship="bottom"
-               relative="org.eclipse.ui.views.PropertySheet"
-               visible="true">
-         </view>
          <viewShortcut
                id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet">
          </viewShortcut>
+         <newWizardShortcut
+               id="reprotool.ide.wizard1">
+         </newWizardShortcut>
       </perspectiveExtension>
    </extension>
    <extension
