little refactoring - reprotool.uc.tempeditor renamed to reprotool.lts, removed the temporary editor

--- a/modules/reprotool.uc.tempeditor/.project
+++ b/modules/reprotool.uc.tempeditor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>reprotool.uc.tempeditor</name>
+	<name>reprotool.lts</name>
 	<comment></comment>
 	<projects>
 	</projects>
