fixed reprotool.lts plugin

--- a/modules/reprotool.lts/build.properties
+++ b/modules/reprotool.lts/build.properties
@@ -7,11 +7,9 @@
 bin.includes = .,\
                model/,\
                META-INF/,\
-               bin/,\
+               plugin.xml,\
                plugin.properties
 jars.compile.order = .
 source.. = src-gen/,\
            src/
 output.. = bin/
-additional.bundles = org.eclipse.emf.mwe2.launch,\
-                     org.eclipse.emf.mwe2.lib
