--- a/modules/reprotool.ide.txtuc.ui/plugin.xml
+++ b/modules/reprotool.ide.txtuc.ui/plugin.xml
@@ -6,12 +6,13 @@
     <extension
             point="org.eclipse.ui.editors">
         <editor
-            class="reprotool.ide.txtuc.ui.TxtUseCaseExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
-            contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
-            default="true"
-            extensions="txtuc"
-            id="reprotool.ide.txtuc.TxtUseCase"
-            name="TxtUseCase Editor">
+              class="reprotool.ide.txtuc.ui.TxtUseCaseExecutableExtensionFactory:org.eclipse.xtext.ui.editor.XtextEditor"
+              contributorClass="org.eclipse.ui.editors.text.TextEditorActionContributor"
+              default="true"
+              extensions="txtuc"
+              icon="icons/pencil.png"
+              id="reprotool.ide.txtuc.TxtUseCase"
+              name="TxtUseCase Editor">
         </editor>
     </extension>
     <extension
@@ -275,6 +276,18 @@
             class="reprotool.ide.txtuc.ui.TxtUseCaseExecutableExtensionFactory:org.eclipse.xtext.ui.editor.model.XtextDocumentProvider"
             extensions="txtuc">
     </provider>
+  </extension>
+  <extension
+        point="org.eclipse.ui.newWizards">
+     <wizard
+           category="reprotool.ide.category1"
+           class="reprotool.ide.txtuc.ui.wizard.NewTxtucWizard"
+           hasPages="true"
+           icon="icons/pencil.png"
+           id="reprotool.ide.txtuc.ui.wizard2"
+           name="Textual use case wizard"
+           project="false">
+     </wizard>
   </extension>
 
 </plugin>
