--- a/modules/reprotool.txtImport/plugin.xml
+++ b/modules/reprotool.txtImport/plugin.xml
@@ -9,7 +9,7 @@
       </category>
       <wizard
             name="Import use-cases"
-            icon="icons/sample.gif"
+            icon="icons/reprotool-web-logo-16x16.png"
             category="reprotool.txtimport.importWizards.sampleCategory"
             class="reprotool.txtimport.importWizards.ImportWizard"
             id="reprotool.txtimport.importWizards.ImportWizard">
@@ -19,9 +19,4 @@
       </wizard>
    </extension>
 
-   <extension point="org.eclipse.core.runtime.adapters">
-      <factory adaptableType="org.eclipse.emf.common.util.URI" class="reprotool.ide.txtuc.ui.TxtUseCaseExecutableExtensionFactory:reprotool.ide.txtuc.ui.ModelLoadingAdapter">
-         <adapter type="reprotool.ide.txtuc.txtUseCase.UseCase" />
-      </factory>
-	</extension>
 </plugin>
