--- a/modules/org.eclipselabs.reprotool.branding/plugin_customization.ini
+++ b/modules/org.eclipselabs.reprotool.branding/plugin_customization.ini
@@ -1,2 +1,5 @@
 org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = true
 org.eclipse.ui/defaultPerspectiveId = reprotool.ide.perspectives.ReprotoolPerspective
+org.eclipse.ui.intro/INTRO_THEME = org.eclipse.ui.intro.universal.circles
+org.eclipse.ui.intro.universal/INTRO_ROOT_PAGES = overview,tutorials,webresources
+org.eclipse.ui.intro/INTRO_STANDBY_PAGE = standbyPageId
