--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -253,7 +253,7 @@
    <extension
          point="org.eclipse.ui.handlers">
          <handler
-            class="reprotool.ide.editors.usecase.DeleteEntityHandler$DeleteAnnotationHandler"
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteAnnotationHandler"
             commandId="org.eclipse.ui.edit.delete">
          <activeWhen>
             <with
@@ -268,7 +268,7 @@
          </activeWhen>
       </handler>
       <handler
-            class="reprotool.ide.editors.usecase.DeleteEntityHandler$DeleteStepHandler"
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteStepHandler"
             commandId="org.eclipse.ui.edit.delete">
          <activeWhen>
             <with
@@ -283,7 +283,7 @@
          </activeWhen>
       </handler>
       <handler
-            class="reprotool.ide.editors.usecase.DeleteEntityHandler$DeleteScenarioHandler"
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteScenarioHandler"
             commandId="org.eclipse.ui.edit.delete">
          <activeWhen>
             <with
@@ -292,6 +292,51 @@
                      operator="or">
                   <instanceof
                         value="reprotool.model.usecase.Scenario">
+                  </instanceof>
+               </iterate>
+            </with>
+         </activeWhen>
+      </handler>
+      <handler
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteActorHandler"
+            commandId="org.eclipse.ui.edit.delete">
+         <activeWhen>
+            <with
+                  variable="selection">
+               <iterate
+                     operator="or">
+                  <instanceof
+                        value="reprotool.model.swproj.Actor">
+                  </instanceof>
+               </iterate>
+            </with>
+         </activeWhen>
+      </handler>
+      <handler
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteConceptualObjectHandler"
+            commandId="org.eclipse.ui.edit.delete">
+         <activeWhen>
+            <with
+                  variable="selection">
+               <iterate
+                     operator="or">
+                  <instanceof
+                        value="reprotool.model.swproj.ConceptualObject">
+                  </instanceof>
+               </iterate>
+            </with>
+         </activeWhen>
+      </handler>
+      <handler
+            class="reprotool.ide.editors.shared.DeleteEntityHandler$DeleteUseCaseHandler"
+            commandId="org.eclipse.ui.edit.delete">
+         <activeWhen>
+            <with
+                  variable="selection">
+               <iterate
+                     operator="or">
+                  <instanceof
+                        value="reprotool.model.usecase.UseCase">
                   </instanceof>
                </iterate>
             </with>
