--- a/modules/reprotool.ide/plugin.xml
+++ b/modules/reprotool.ide/plugin.xml
@@ -153,6 +153,16 @@
                relative="org.eclipse.ui.views.ProgressView"
                visible="true">
          </view>
+         <view
+               closeable="true"
+               id="org.eclipse.ui.console.ConsoleView"
+               minimized="false"
+               moveable="true"
+               ratio="0.7"
+               relationship="stack"
+               relative="org.eclipse.ui.views.PropertySheet"
+               visible="true">
+         </view>
          <viewShortcut
                id="reprotool.ide.views.sentenceanalysis.SentenceAnalysisSheet">
          </viewShortcut>
