added new example project fixed issue in nusmv generation that occured when you had 2 annotations where one is a substring of the other (for example lock/unlock)

--- a/modules/reprotool.exampleProjects/plugin.xml
+++ b/modules/reprotool.exampleProjects/plugin.xml
@@ -20,6 +20,11 @@
                description="This example project is prepared for exporting into UML"
                name="UML Export">
          </projectDescriptor>
+         <projectDescriptor
+               contentURI="resources/lockingSystem.swproj.zip"
+               description="This example project demonstrates the ability of adding custom annotations to Reprotool projects"
+               name="Locking system">
+         </projectDescriptor>
       </example>
    </extension>
    <extension
