--- a/modules/reprotool.ide.txtuc/build.properties
+++ b/modules/reprotool.ide.txtuc/build.properties
@@ -4,3 +4,5 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.xml
+additional.bundles = org.eclipse.emf.mwe2.lib,\
+                     org.eclipse.emf.mwe.utils
